# cmake_learn

./: .travis.yml  CMakeLists.txt  README.md
Demo1/: CMakeLists.txt  MathFunctions.cpp  config.h.in  main.cpp
Demo1/math/: CMakeLists.txt  MathFunctions.cpp
scripts/: before_install_ubuntu.sh
